<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:android="http://schemas.android.com/apk/res/android">

    <data>
        <import type="android.view.View"/>
        <variable name="model" type="com.mas.mobile.presentation.viewmodel.CategoryViewModel"/>
    </data>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginLeft="20dp"
        android:layout_marginRight="20dp"
        android:orientation="vertical"
        tools:context=".presentation.activity.MainActivity">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:paddingTop="10dp"
            android:paddingBottom="10dp">

            <com.google.android.material.textfield.TextInputLayout
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:hint="@string/hint_category_name"
                android:enabled="@{model.isEditable()}"
                app:error="@{model.nameError}"
                app:errorEnabled='@{!model.nameError.isEmpty()}'>

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/categoryName"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:inputType="none"
                    android:maxLength="30"
                    android:singleLine="true"
                    android:text="@={model.name}" />
            </com.google.android.material.textfield.TextInputLayout>

            <ImageView
                android:id="@+id/categoryIcon"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_vertical"
                android:layout_marginStart="10dp"
                android:layout_marginEnd="0dp"
                android:contentDescription="@string/content_icon"
                android:src="@drawable/ic_circle"
                app:tint="@color/colorDeepGray"/>
        </LinearLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingTop="10dp"
            android:paddingBottom="10dp"
            android:hint="@string/hint_description"
            android:enabled="@{model.isEditable()}">

            <com.google.android.material.textfield.TextInputEditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="textMultiLine"
                android:maxLength="200"
                android:singleLine="true"
                android:text="@={model.description}" />
        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingTop="10dp"
            android:paddingBottom="10dp"
            android:hint="@string/hint_category_plan"
            android:enabled="@{model.isEditable()}">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/spendingAmount"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="numberDecimal"
                android:maxLength="10"
                android:selectAllOnFocus="false"
                android:singleLine="true"
                android:text="@={model.plan}"
                app:onFocusLost="@{model.plan}" />
        </com.google.android.material.textfield.TextInputLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:clickable="true"
            android:orientation="horizontal">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textAppearance="?attr/textAppearanceSubtitle1"
                android:text="@string/hint_is_active"
                android:enabled="@{model.isEditable()}"/>
            <View
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="2"/>
            <androidx.appcompat.widget.SwitchCompat
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:checked="@={model.isActive()}"
                android:enabled="@{model.isEditable()}"/>
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:clickable="true"
            android:orientation="horizontal">

            <com.google.android.material.textfield.TextInputLayout
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:paddingTop="10dp"
                android:paddingBottom="10dp"
                android:hint="@string/hint_merchant"
                android:enabled="@{model.isEditable()}"
                app:error="@{model.merchantsError}"
                app:errorEnabled='@{!model.merchantsError.isEmpty()}'>

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/addChipEditText"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:inputType="text"
                    android:maxLength="30"
                    android:singleLine="true"
                    android:text="@={model.currentMerchant}"/>
            </com.google.android.material.textfield.TextInputLayout>

            <Button
                android:id="@+id/addChipButton"
                style="@style/Widget.App.Button.OutlinedButton.IconOnly"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_vertical"
                android:enabled="@{model.isEditable()}"
                android:contentDescription="@string/btn_add"
                app:icon="@drawable/ic_add_24"/>
        </LinearLayout>
        <com.google.android.material.chip.ChipGroup
            android:id="@+id/merchantChipGroup"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:layout_marginBottom="10dp"
            android:enabled="@{model.isEditable()}"
            app:singleLine="false"
            app:singleSelection="false"
            app:chipSpacing="8dp" />

        <Button
            android:id="@+id/categorySaveButton"
            style="@style/Widget.MaterialComponents.Button.Icon"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="end"
            android:enabled="@{model.isEditable()}"
            android:visibility="@{model.isEditable() ? View.VISIBLE : View.GONE}"
            android:text="@string/btn_save" />
    </LinearLayout>
</layout>