<?xml version="1.0" encoding="utf-8"?>
<layout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <data>
        <variable name="model" type="com.mas.mobile.domain.budget.Category"/>
        <variable name="callback" type="android.view.View.OnClickListener"/>
    </data>

    <LinearLayout
        android:id="@+id/layoutRowCard"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:background="?attr/selectableItemBackground"
        android:alpha="@{model.isActive ? 1f : 0.5f}"
        android:clickable="true">

        <ImageView
            android:id="@+id/categoryRowIcon"
            android:layout_width="32dp"
            android:layout_height="32dp"
            android:layout_margin="6dp"
            android:layout_gravity="center_vertical"
            android:src="@drawable/ic_circle"
            android:contentDescription="@string/content_icon"
            app:tint="@color/colorDeepGray" />

        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:layout_gravity="center_vertical"
            android:orientation="vertical">

            <TextView
                android:id="@+id/categoryRowName"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center_vertical"
                android:textAppearance="?android:attr/textAppearanceListItem"
                android:text="@{model.name}"/>

            <TextView
                android:id="@+id/categoryRowPlan"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center_vertical"
                android:textAppearance="?android:attr/textAppearanceSmall"
                android:text="@{@string/formatter_money(model.plan)}"/>
        </LinearLayout>

        <Button
            style="@style/Widget.App.Button.OutlinedButton.IconOnly"
            android:id="@+id/categoryRowMenu"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="end"
            android:contentDescription="@string/btn_menu"
            android:onClick="@{callback}"
            app:icon="@drawable/ic_baseline_more_vert_24" />
    </LinearLayout>
</layout>